--- a/catkin_ws/src/tree_pointcloud_viz/package.xml
+++ b/catkin_ws/src/tree_pointcloud_viz/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>my_pcl_tutorial</name>
+  <name>tree_pointcloud_viz</name>
   <version>0.0.0</version>
-  <description>The my_pcl_tutorial package</description>
+  <description>The tree_pointcloud_viz package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/my_pcl_tutorial</url> -->
+  <!-- <url type="website">http://wiki.ros.org/tree_pointcloud_viz</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -53,6 +53,7 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>libpcl-all-dev</build_depend>
   <build_export_depend>pcl_conversions</build_export_depend>
   <build_export_depend>pcl_ros</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -61,6 +62,7 @@
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>libpcl-all</exec_depend>
 
 
 
